INCLUDES = -I/usr/local/include/ClanLib-0.8 -I../../../clanlibstuff/novashell/source \
-I../.. -I../../include -I../../lua -I../../luabind -I../../lua/src

noinst_LIBRARIES = libeffects.a
libeffects_a_SOURCES = L_DroppingEffect.cpp L_EffectEmitter.cpp\
	L_EffectManager.cpp L_ExplosionEffect.cpp L_MotionController.cpp\
	L_Particle.cpp L_ParticleEffect.cpp L_ParticleMem.cpp\
	L_ParticleSystem.cpp L_ShootingEffect.cpp L_Vector.cpp
