INCLUDES = -I$(top_srcdir)/../../SharedLib -I$(top_srcdir)/../../SharedLib/lua 	-I$(top_srcdir)/../../SharedLib/lua/src \
-I$(top_srcdir)/../../SharedLib/luabind -I$(top_srcdir)/../../SharedLib/misc 	-I$(top_srcdir)/source \
-I$(top_srcdir)/source/AI -I/usr/local/include/ClanLib-1.0 $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libGuiStyleBitmap.a
libGuiStyleBitmap_a_SOURCES = button_Bitmap.cpp checkbox_Bitmap.cpp\
	frame_Bitmap.cpp inputbox_Bitmap.cpp label_Bitmap.cpp listbox_Bitmap.cpp\
	NS_MessageBox.cpp scrollbar_Bitmap.cpp stylemanager_Bitmap.cpp\
	window_Bitmap.cpp
